<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_NewsDetailFragment"
            app:destination="@id/NewsDetailFragment" />

        <action
            android:id="@+id/action_HomeFragment_to_WebViewFragment"
            app:destination="@id/WebViewFragment" />

        <action
            android:id="@+id/action_HomeFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/NewsDetailFragment"
        android:name="com.example.myapplication.ui.news.NewsDetailFragment"
        android:label="@string/news_detail_fragment_label"
        tools:layout="@layout/fragment_news_detail">

        <action
            android:id="@+id/action_NewsDetailFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/WebViewFragment"
        android:name="com.example.myapplication.ui.web_views.WebViewFragment"
        android:label="@string/web_view_fragment_label"
        tools:layout="@layout/fragment_web_view">

        <action
            android:id="@+id/action_WebViewFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.myapplication.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>

</navigation>