<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription">

    <data>
        <import type="android.view.View"/>

        <variable
            name="userLoan"
            type="com.example.myapplication.data.remote.responses.UserLoan" />

        <!-- Will be used to toggle the texts between @string/apply_loan_tag_caption
            and @string/apply_loan_tag_caption_2-->
        <variable
            name="itemPosition"
            type="java.lang.Integer" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loan_apply_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        android:background="?android:selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/loan_apply_img_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/primaryColor">

                <ImageView
                    android:id="@+id/loan_apply_img"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:adjustViewBounds="false"
                    android:scaleType="fitXY"
                    android:scaleX="0.75"
                    android:scaleY="0.75"
                    app:tint="@color/white"
                    android:src="@drawable/img_loan_status_apply"/>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/loan_apply_views_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loan_apply_img_layout"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/apply_loan_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/apply_for_loan_tag"/>

                <TextView
                    android:id="@+id/apply_loan_tag_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:text="@string/apply_loan_tag_caption"
                    app:stringToFormatText="@{``+userLoan.userLoanLocale.currency ?? `Kshs`}"
                    app:stringToFormatText2="@{``+userLoan.userLoanLocale.loanLimit ?? `0`}"
                    app:stringToFormat="@{itemPosition % 2 == 0 ? @string/apply_loan_tag_caption : @string/apply_loan_tag_caption_2}"/>

                <Button
                    android:id="@+id/apply_loan_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:elevation="10dp"
                    android:textSize="14sp"
                    android:paddingHorizontal="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/apply_for_loan_btn_tag"
                    app:backgroundTint="@color/button_color"
                    android:textColor="@android:color/white"
                    app:rippleColor="@android:color/transparent" />

            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>